# agentwebui-test

./: .env.example  .gitignore  Cargo.toml
agent-k/: Cargo.toml
agent-k/src/: lib.rs  provider.rs
agent-k/src/agents/: coworker.rs  deep_research.rs  minerva.rs  mod.rs  router.rs
agent-k/src/agents/speedwagon/: agent.rs
agent-k/src/agents/speedwagon/tool/: calculate.rs  find.rs  mod.rs  read.rs  search.rs
agent-k/src/knowledge_base/: description.rs  document.rs  helper.rs  indexer.rs  preset.rs  searcher.rs
agent-k/src/knowledge_base/translator/: html.rs  pdf.rs
agents/: Cargo.toml
agents/src/: lib.rs
agents/src/knowledge/: indexer.rs  mod.rs  parser.rs  searcher.rs  translator.rs
agents/src/main/: mod.rs
agents/src/speedwagon/: agent.rs  mod.rs
agents/src/speedwagon/tool/: find.rs  mod.rs  read.rs  search.rs
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/docs/: frontend-api-contract-audit.ko.md  frontend-api-contract-audit.md
app/scripts/: run_cowork_demo.sh  seed_cowork_demo.py
app/src/: App.tsx  main.tsx  routeTree.gen.ts
app/src/api/: auth.ts  backend-types.ts  client.ts  dirents.ts  messages.ts  projects.ts  sessions.ts  transformers.ts  ws.ts
app/src/components/: ConfirmDialog.tsx  FolderPickerDialog.tsx  Icon.tsx  InviteDialog.tsx  NewFolderDialog.tsx  RenameDialog.tsx  SessionCardMenu.tsx  SessionTitleText.tsx  Toast.tsx  fileComponents.tsx  uiPrimitives.tsx
app/src/data/: seed.ts
app/src/domain/: appState.ts  capabilities.ts  files.ts  metadata.ts  types.ts
app/src/lib/: formatMessageTime.ts  permissions.ts  timeAgo.ts  types.ts  useTypingText.ts
app/src/routes/: __root.tsx  _app.tsx  (+12 more)
app/tests/: cowork-smoke.spec.ts
backend/: .env.template  .gitignore  Cargo.toml
backend-v2/: Cargo.toml  README.md
backend-v2/docs/superpowers/plans/: 2026-05-06-backend-v2-refactor.md  2026-05-07-project-session-sharing.md  2026-05-07-repository-domain-split.md
backend-v2/docs/superpowers/specs/: 2026-05-07-repository-domain-split-design.md
backend-v2/migrations/: 0001_create_sessions.sql  0002_create_users.sql  0003_projects_and_sessions.sql
backend-v2/src/: cli.rs  error.rs  handlers.rs  lib.rs  main.rs  prompt.rs  router.rs  state.rs
backend-v2/src/auth/: bootstrap.rs  password.rs  role.rs
backend-v2/src/handlers/: dirent.rs  document.rs  mod.rs  project.rs  session.rs  user.rs
backend-v2/src/model/: dirent.rs  document.rs  message.rs  mod.rs  session.rs  user.rs
backend-v2/src/models/: agent.rs  mod.rs  provider.rs
backend-v2/src/repository/: mod.rs  postgres.rs  project.rs  session.rs  sqlite.rs  user.rs
backend-v2/src/services/: session.rs
backend-v2/src/session/: handler.rs  model.rs
backend-v2/tests/: auth_test.rs  e2e_test.rs  message_history_persistence.rs  project_test.rs  sandbox_per_session.rs  session_authz_test.rs  session_fork_test.rs  session_messages_test.rs  session_sandbox_test.rs
backend-v2/tests/common/: mod.rs
backend/data/: knowledge_agents.json
backend/migrations/: 0004_automations.sql  0004_session_metadata.sql  0005_session_message_sender.sql  0006_automations.sql
backend/src/: cron.rs  events.rs  handlers.rs  lib.rs  main.rs  models.rs  prompt.rs  router.rs  state.rs  worker.rs
backend/src/agent/: spec.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: auth.rs  automation.rs  dirent.rs  mod.rs  project.rs  session.rs  ws.rs
backend/src/model/: automation.rs  automation_run.rs  automation_run_event.rs  automation_trigger.rs  dirent.rs  mod.rs  project.rs  session.rs
backend/src/models/: agent.rs  mod.rs  provider.rs  session.rs  source.rs  speedwagon.rs
backend/src/repository/: automation.rs  mod.rs  postgres.rs  project.rs  session.rs  sqlite.rs
backend/src/services/: indexing.rs  mod.rs  session.rs  session_title.rs  speedwagon.rs
backend/tests/: auth_test.rs  automation_test.rs  dirent_test.rs  document_test.rs  e2e_test.rs  project_test.rs  session_messages_test.rs  session_metadata_test.rs  session_sandbox_test.rs  session_test.rs
backend/tests/common/: mod.rs
chat-agent/: Cargo.toml  README.md
chat-agent/convert-pdf-to-md/: build.sh  pyproject.toml  run.py
chat-agent/src/: chat_agent.rs  knowledge.rs  lib.rs  open.rs  tools.rs
chat-agent/src/speedwagon/: dispatch.rs  indexing.rs  mod.rs
chat-agent/src/tools/: mod.rs  open.rs  read.rs
chat-agent/tests/: routing_test.rs
convert-pdf-to-md/: README.md  build.sh  convert_pdf_to_md.py
docker/: Dockerfile
docling-sys/: .gitignore  Cargo.toml  build.rs
docling-sys/python/: README.md  pyproject.toml  run_docling.py
docling-sys/src/: lib.rs
docs/: api-design-issues.md  code-structure-issues.md  conventions.md  gap-analysis.md  project-vision.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  constants.ts  dummy-data.ts  store.ts  types.ts
knowledge-agent/: .gitignore  Cargo.toml  README.md  settings.json
knowledge-agent/src/: indexer.rs  lib.rs  main.rs
knowledge-agent/src/agent/: builder.rs  config.rs  mod.rs  runner.rs  tracer.rs
knowledge-agent/src/tools/: bash.rs  calculate.rs  common.rs  find.rs  glob.rs  mod.rs  open.rs  python.rs  search.rs  summarize.rs
knowledge-agent/src/tui/: app.rs  mod.rs
knowledge-agent/tests/: bash_tests.rs  calculator_tests.rs  e2e_react_test.rs  find_comparison_test.rs  find_open_tests.rs  python_tests.rs  search_tests.rs  summarize_tests.rs  sync_tests.rs
reflect-agent/: Cargo.toml
reflect-agent/src/: agent.rs  lib.rs  main.rs  provider.rs  reflect.rs  verify.rs
reflect-agent/tests/: demo_task.rs  reflect_modes.rs
scripts/: setup-data.sh
speedwagon/: Cargo.toml  README.md
speedwagon/src/: agent.rs  lib.rs  main.rs  provider.rs
speedwagon/src/store/: description.rs  document.rs  helper.rs  indexer.rs  mod.rs  parser.rs  preset.rs  searcher.rs  translator.rs
speedwagon/src/store/translator/: html.rs  mod.rs  pdf.rs
speedwagon/src/tool/: calculate.rs  find.rs  mod.rs  read.rs  search.rs
(+59 files in other folders)
