[workspace]
resolver = "3"
members = [
    "./agent-k",
    "./backend",
    "./docling-sys",
    "./reflect-agent",
]

[workspace.dependencies]
agent-k = { path = "./agent-k" }
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "16508f068407d277251112c65541f4bf8e5cf575", features = ["sandbox"] }
