[workspace]
resolver = "3"
members = [
    "./agent-k",
    "./backend",
    "./docling-sys",
    "./reflect-agent",
]

[workspace.dependencies]
agent-k = { path = "./agent-k" }
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "353f10ee304694e30a3cca9fe6d03f32b4b9da2e", features = ["sandbox"] }
