[package]
name = "agent-k"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
internal = ["dep:knowledge-base-examples"]

[dependencies]
ailoy = { workspace = true }
anyhow = "1"
dirs = "6"
futures = "0.3"
html-to-markdown-rs = "3.4.0-rc.2"
indexmap = "2"
knowledge-base-examples = { path = "../../knowledge-base-examples", optional = true }
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tantivy = "0.22"
tempfile = "3"
tokio = { version = "1", features = ["process", "io-util", "rt", "fs"] }
tokio-stream = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v5"] }
