[package]
name = "agentwebui_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
agents = { path = "../agents" }
aide = { version = "0.14", features = ["axum", "axum-json", "axum-query", "axum-extra", "macros", "redoc", "swagger", "scalar"] }
ailoy = { workspace = true }
async-stream = "0.3"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bytes = "1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
futures-util = "0.3"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "fs", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5", features = ["util"] }
