[package]
name = "chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "55c472cb1f1450cc82cdc028e5450e2398d7418e" }
anyhow = "1.0.100"
futures = "0.3"
knowledge-agent = { git = "https://github.com/brekkylab/agentmaker.git", rev = "255beb2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }

tokio = { version = "1.48.0", features = ["fs", "macros", "rt"] }

[dev-dependencies]
