[package]
name = "chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ailoy = { git = "https://github.com/brekkylab/ailoy.git", rev = "b0c5b92af2da82b7e45523cc9d71e24dea8e24e3" }
anyhow = "1.0.100"
async-stream = "0.3"
futures = "0.3"
knowledge-agent = { path = "../knowledge-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tracing = "0.1"
url = { version = "2.5.7", features = ["serde"] }

tokio = { version = "1.48.0", features = ["fs", "macros", "rt"] }

[dev-dependencies]
