[package]
name = "docling-sys"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "fs"] }

[features]
default = []
# Skip the (slow) PyInstaller build at compile time. Calls to the runtime
# API will return an error. Useful for unrelated workspace builds in CI.
skip-bundle = []
# Build the bundle against CPU-only torch wheels (smaller binary, no GPU).
# When disabled, the native torch is used: CUDA on Linux, MPS on macOS.
cpu = []
