[package]
name = "knowledge-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "knowledge_agent"
path = "src/lib.rs"

[[bin]]
name = "knowledge-agent"
path = "src/main.rs"

[dependencies]
ailoy = { workspace = true }
dotenvy = "0.15"
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
log = "0.4"
regex = "1"
globset = "0.4"
ignore = "0.4"
url = { version = "2", features = ["serde"] }
indexmap = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rustyline = "15"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
