[package]
name = "reflect-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "reflect_agent"
path = "src/lib.rs"

[[bin]]
name = "reflect-agent"
path = "src/main.rs"

[features]
default = []
sandbox = ["ailoy/sandbox"]

[dependencies]
ailoy = { workspace = true }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
indexmap = "2"
regex = "1"
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
