[package]
name = "reflect-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "reflect_agent"
path = "src/lib.rs"

[[bin]]
name = "reflect-agent"
path = "src/main.rs"

[features]
default = []
sandbox = ["ailoy/sandbox"]

[dependencies]
ailoy = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
rustyline = "15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
