[package]
name = "speedwagon"
version = "0.1.0"
edition = "2024"

[features]
default = ["internal"]
internal = ["dep:knowledge-base-examples"]

[lib]
name = "speedwagon"
path = "src/lib.rs"

[[bin]]
name = "speedwagon"
path = "src/main.rs"
required-features = ["internal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ailoy = { workspace = true }
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dirs = "6"
futures = "0.3"
globset = "0.4"
html-to-markdown-rs = "3.4.0-rc.2"
ignore = "0.4"
indexmap = "2"
knowledge-base-examples = { path = "../../knowledge-base-examples", optional = true }
log = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tantivy = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v5"] }
